Bug 409807 - Some checkboxes and their labels are misaligned
Summary: Some checkboxes and their labels are misaligned
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-15 00:46 UTC by Patrick Silva
Modified: 2019-07-20 22:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (36.49 KB, image/jpeg)
2019-07-15 00:46 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-07-15 00:46:35 UTC
Created attachment 121515 [details]
screenshot

SUMMARY
As we can see in the attached screenshot, some checkboxes and their labels are misaligned in the crash reporter. Not always this bug occurs, apparently it is a random bug.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.16.80
KDE Frameworks Version: 5.61.0
Qt Version: 5.12.3
Comment 1 Harald Sitter 2019-07-15 16:39:13 UTC
always reproducible with systemsettings5. I suspect this is a regression caused by the new example label
Comment 2 Harald Sitter 2019-07-20 22:34:54 UTC
Git commit 5a59721d7efe89adbfad2dec39878d65c2655228 by Harald Sitter.
Committed on 20/07/2019 at 22:32.
Pushed by sitter into branch 'master'.

wrap the details example label+spacer in a container widget

Summary:
this way we can control both their visibility in a single call. with the
previous code we'd only set the label as hidden and leave a dangling
spacer to mess with the layout.

Test Plan:
- segv dolphin -> report -> layout shows example
- segv systemsettings5 -> report -> layout shows no example but is correctly spaced

Reviewers: #plasma, apol

Reviewed By: apol

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D22485

M  +2    -1    src/bugzillaintegration/reportassistantpages_base.cpp
M  +39   -37   src/bugzillaintegration/ui/assistantpage_bugawareness.ui

https://commits.kde.org/drkonqi/5a59721d7efe89adbfad2dec39878d65c2655228