wrap the details example label+spacer in a container widget

Summary:
this way we can control both their visibility in a single call. with the
previous code we'd only set the label as hidden and leave a dangling
spacer to mess with the layout.

BUG: 409807

Test Plan:
- segv dolphin -> report -> layout shows example
- segv systemsettings5 -> report -> layout shows no example but is correctly spaced

Reviewers: #plasma, apol

Reviewed By: apol

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D22485